@@ -96,9 +96,9 @@ const char* machine_get_id( libspectrum_machine type );
 
 int machine_set_timings( fuse_machine_info *machine );
 
-int machine_load_rom_bank( memory_page* bank_map, size_t which,
+int machine_load_rom_bank( memory_page* bank_map, size_t which, int page_num,
 			   const char *filename, size_t expected_length );
-int machine_load_rom( size_t which, const char *filename,
+int machine_load_rom( size_t which, int page_num, const char *filename,
 		      size_t expected_length );
 
 int machine_reset( void );
