@@ -130,11 +130,11 @@ pentagon_reset(void)
 
   trdos_reset();
 
-  error = machine_load_rom( 0, settings_current.rom_pentagon_0, 0x4000 );
+  error = machine_load_rom( 0, 0, settings_current.rom_pentagon_0, 0x4000 );
   if( error ) return error;
-  error = machine_load_rom( 2, settings_current.rom_pentagon_1, 0x4000 );
+  error = machine_load_rom( 2, 1, settings_current.rom_pentagon_1, 0x4000 );
   if( error ) return error;
-  error = machine_load_rom( 4, settings_current.rom_pentagon_2, 0x4000 );
+  error = machine_load_rom( 4, 2, settings_current.rom_pentagon_2, 0x4000 );
   if( error ) return error;
 
   trdos_available = 1;
