@@ -132,13 +132,13 @@ scorpion_reset(void)
 
   trdos_reset();
 
-  error = machine_load_rom( 0, settings_current.rom_scorpion_0, 0x4000 );
+  error = machine_load_rom( 0, 0, settings_current.rom_scorpion_0, 0x4000 );
   if( error ) return error;
-  error = machine_load_rom( 2, settings_current.rom_scorpion_1, 0x4000 );
+  error = machine_load_rom( 2, 1, settings_current.rom_scorpion_1, 0x4000 );
   if( error ) return error;
-  error = machine_load_rom( 4, settings_current.rom_scorpion_3, 0x4000 );
+  error = machine_load_rom( 4, 3, settings_current.rom_scorpion_3, 0x4000 );
   if( error ) return error;
-  error = machine_load_rom( 6, settings_current.rom_scorpion_2, 0x4000 );
+  error = machine_load_rom( 6, 2, settings_current.rom_scorpion_2, 0x4000 );
   if( error ) return error;
 
   trdos_available = 1;
