@@ -134,7 +134,7 @@ spec48_reset( void )
 {
   int error;
 
-  error = machine_load_rom( 0, settings_current.rom_48, 0x4000 );
+  error = machine_load_rom( 0, 0, settings_current.rom_48, 0x4000 );
   if( error ) return error;
 
   error = periph_setup( peripherals, peripherals_count,
