@@ -231,13 +231,13 @@ specplus3_reset( void )
 {
   int error;
 
-  error = machine_load_rom( 0, settings_current.rom_plus3_0, 0x4000 );
+  error = machine_load_rom( 0, 0, settings_current.rom_plus3_0, 0x4000 );
   if( error ) return error;
-  error = machine_load_rom( 2, settings_current.rom_plus3_1, 0x4000 );
+  error = machine_load_rom( 2, 1, settings_current.rom_plus3_1, 0x4000 );
   if( error ) return error;
-  error = machine_load_rom( 4, settings_current.rom_plus3_2, 0x4000 );
+  error = machine_load_rom( 4, 2, settings_current.rom_plus3_2, 0x4000 );
   if( error ) return error;
-  error = machine_load_rom( 6, settings_current.rom_plus3_3, 0x4000 );
+  error = machine_load_rom( 6, 3, settings_current.rom_plus3_3, 0x4000 );
   if( error ) return error;
 
   error = periph_setup( specplus3_peripherals, specplus3_peripherals_count,
