@@ -215,9 +215,9 @@ tc2068_reset( void )
 
   error = dock_exrom_reset(); if( error ) return error;
 
-  error = machine_load_rom( 0, settings_current.rom_tc2068_0, 0x4000 );
+  error = machine_load_rom( 0, 0, settings_current.rom_tc2068_0, 0x4000 );
   if( error ) return error;
-  error = machine_load_rom( 2, settings_current.rom_tc2068_1, 0x2000 );
+  error = machine_load_rom( 2, -1, settings_current.rom_tc2068_1, 0x2000 );
   if( error ) return error;
 
   error = periph_setup( peripherals, peripherals_count,
